tests/integration/snapshots/integration__conformance__n_string_incomplete_surrogate_escape_invalid.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 1
success: false
stdin ---
["\uD800\uD800\x"]
stdout ---

stderr ---
error: expected escapable sequence, found `x`.
       valid escapes are `\"`, `\\`, `\/`, `\b`, `\f`, `\n`, `\r`, `\t` or `\uXXXX` (4 hex digits)
 --> stdin:1:16
  |
1 | ["\uD800\uD800\x"]
  |  -            -^
  |  |            |
  |  |            escape slash found here
  |  opening quote found here
  |
help: remove unnecessary escape slash
  |
1 - ["\uD800\uD800\x"]
1 + ["\uD800\uD800x"]
  |
