tests/integration/snapshots/integration__conformance__n_string_invalid-utf-8-in-escape.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 1
success: false
stdin ---
raw bytes: [91, 34, 92, 117, 229, 34, 93]
stdout ---

stderr ---
error: source did not contain valid utf8
 --> stdin
  |
