tests/integration/snapshots/integration__conformance__n_string_invalid_backslash_esc.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 1
success: false
stdout ---
["\a"]
stderr ---
error: expected escapable sequence, found `a`.
       valid escapes are `\"`, `\\`, `\/`, `\b`, `\f`, `\n`, `\r`, `\t` or `\uXXXX` (4 hex digits)
 --> stdin:1:4
  |
1 | ["\a"]
  |  --^
  |  ||
  |  |escape slash found here
  |  opening quote found here
  |
help: remove unnecessary escape slash
  |
1 - ["\a"]
1 + ["a"]
  |
