tests/integration/snapshots/integration__conformance__n_string_invalid_unicode_escape.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
["\uqqqq"]
stdout ---

stderr ---
error: expected hex digit 1 of 4 in escape, found `q`
 --> stdin:1:5
  |
1 | ["\uqqqq"]
  |  ---^
  |  ||
  |  |\u escape started here
  |  opening quote found here
