tests/integration/snapshots/integration__conformance__n_string_invalid_utf8_after_escape.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 1
success: false
stdin ---
raw bytes: [91, 34, 92, 229, 34, 93]
stdout ---

stderr ---
error: expected a continuation byte, found 0x22
 --> stdin:1:4
  |
1 | ["\�"]
  |    ^
