tests/integration/snapshots/integration__conformance__n_string_invalid_utf8_after_escape.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 1
success: false
stdout ---
raw bytes: [91, 34, 92, 229, 34, 93]
stderr ---
error: source did not contain valid utf8
 --> stdin
  |
